[package]
name = "sim"
version = "0.1.0"
authors = ["✨ Alex ✨ <alex@dytry.ch>"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.61", features = [] }
js-sys = "0.3.45"
web-log = "1.0.1"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }
web-sys = { version = "0.3.45", features = [
    'console',
    'Document',
    'Window',
    'CanvasRenderingContext2d',
    'Element',
    'HtmlCanvasElement',
    'Window',
] }
itertools = "0.13.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
