[package]
name = "slomojs"
version = "0.1.0"
authors = ["✨ Alex ✨ <alex@dytry.ch>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
js-sys = "0.3.77"
web-sys = { version = "0.3.45", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "CssStyleDeclaration",
    "Animation",
    "AnimationEffect",
    "KeyframeEffect",
    "KeyframeEffectOptions",
    "FillMode",
] }
swc_ecma_parser = "0.42.0"
swc_common = { version = "0.10.5", features = ["tty-emitter"] }
swc_ecma_ast = "0.34.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.9.0"
paste = "1.0"
wasm-bindgen-futures = "0.4.18"
async-trait = "0.1.42"
futures = "0.3.8"
lazy_static = "1.4.0"
unzip-n = "0.1.2"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
